--- a/Ikesios/app/src/main/AndroidManifest.xml
+++ b/Ikesios/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Disease_Habit"></activity>
+        <activity android:name=".Symptom_Check"></activity>
+        <activity android:name=".Covid_Final" />
+        <activity android:name=".Covid_Other" />
+        <activity android:name=".DiseaseStatement_Start" />
+        <activity android:name=".Disease_Habit" />
         <activity android:name=".Other_End" />
         <activity android:name=".Other_Statement" />
         <activity android:name=".CovidStatus" />
